--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-Name:Rajan Patrick Caccam
+Name:
 Course:235.01
 Homework:#1
 Git-Hub:https://github.com/User-Banned/yourHomeWork
