--- a/index.html
+++ b/index.html
@@ -1,39 +1,32 @@
 <!DOCTYPE html>
 <!--
-Name:
+Name:R.P.C. (Shortened to Initials to Hide Real Name)
 Course:235.01
 Homework:#1
-Git-Hub:https://github.com/User-Banned/yourHomeWork
+Git-Hub:https://github.com/User-Banned/CSC-235_HW-01
 -->
 <html>
 <head>
 <style type="text/css">
 <!--
-
+tr.c	{border-collapse:collapse;}
+td.c	{border-collapse:collapse;}
+table.c	{border-collapse:collapse;}
 table.fpage	{width:100%;
-			border-collapse:collapse;
-			}
-
-
-table.head	{border-collapse:collapse;
-			}
+			border-collapse:collapse;}
+table.head	{border-collapse:collapse;}
 img.logo{width:200px;
-		border-collapse:collapse;
-		}
+		height:150px;
+		border-collapse:collapse;}
 td.title{padding-left:1em;
 		font-family:Lucida Sans Unicode;
 		font-style:italic;
-		font-size:28px;
+		font-size:34px;
 		color:#970c73;
 		text-shadow:0px 8px 12px #5e78e4;
-		border-collapse:collapse;
-		}
-
-
+		border-collapse:collapse;}
 table.fmenu	{width:100%;
-			border-collapse:collapse
-			}
-
+			border-collapse:collapse}
 td.menu1{width:12%;
 		background-color:#283368;
 		color:#f3ee86;
@@ -42,69 +35,118 @@ td.menu1{width:12%;
 		padding-top:10px;
 		padding-bottom:10px;
 		border-left:4px solid #000000;
-		border-right:4px solid #000000;
-		border-collapse:collapse
-		}
-
+		border-right:4px solid #000000;}
 td.menu2{width:12%;
 		background-color:#7d83cb;
-		color:white;font-family:
-		Trebuchet MS;
+		color:white;
+		font-family:Trebuchet MS;
 		text-align:center;
 		padding-top:10px;
 		padding-bottom:10px;
 		border-left:4px solid #000000;
-		border-right:4px solid #000000;
-		border-collapse:collapse
-		}
-		
-table.mainbody	{border-collapse:collapse;
-				}
-td.body1{width:40%;
-		height:100%;
-		background-color:#eab8c3;
-		border-collapse:collapse;
-		}
-div.b1subt	{background-image: linear-gradient(to bottom,#c075b0,#eab8c3);
-			float:top;
-			}
-td.b1text1	{
-			}
-img.b1pic1	{width:90%;
-			}
-img.b1pic2	{width:90%;
-			}
-
-td.body2{width:60%;
-		height:100%;
-		border-collapse:collapse;
-		}
-div.b2subt	{background-image: linear-gradient(#eadec4,#FFFFFF);
-			float:top;
-			text-align:top;
-			}
-img.b2pic1	{width:90%;
-			}
-td.copy	{background-color:#ddddFF
-		}
-
+		border-right:4px solid #000000;}
+td.menu3{width:12%;
+		background-color:#7d83cb;
+		color:#7d83cb;
+		font-family:Trebuchet MS;
+		text-align:center;
+		padding-top:10px;
+		padding-bottom:10px;
+		border-left:4px solid #000000;
+		border-right:4px solid #000000;}
+td.bodyleft	{width:43%;
+			height:100%;
+			background-color:#eab8c3;
+			border-collapse:collapse;}
+div.b1show	{background-image:linear-gradient(to bottom,#c075b0,#eab8c3);
+			padding:20px;}
+div.b1subt	{font-family:Trebuchet MS;
+			font-size:22px;
+			letter-spacing:4px;}
+div.b1subt2	{font-family:Trebuchet MS;
+			text-decoration:overline;
+			font-size:20px;}
+p.text	{font-family:Times New Roman;
+		font-size:17px;}
+div.b1morpho{border:3px dotted brown;
+			padding:20px;}
+span.user	{font-family:Courier New;}
+span.blue 	{color:#3b33d7;}
+span.brown	{color:#79584b;}
+div.b1tail	{border:3px dotted brown;
+			padding:20px;}
+img.b1pic1	{width:80%;
+			border-color:#d621d3;}
+img.b1pic2	{width:80%;
+			border-color:#d621d3;}
+td.bodyright	{width:57%;
+				vertical-align:top;
+				border-collapse:collapse;}	
+div.b2state	{background-image: linear-gradient(#eadec4,#FFFFFF);
+			padding-top:20px;
+			padding-left:69px;
+			padding-right:10px;}				
+div.b2subt	{font-family:Trebuchet MS;
+			font-size:22px;
+			letter-spacing:4px;}
+div.b2subt2	{font-family:Trebuchet MS;
+			text-decoration:overline;
+			font-size:20px;}
+div.b2subt3	{font-family:Trebuchet MS;
+			text-decoration:overline;
+			font-size:17px;}
+div.b2news	{padding-top:20px;
+			padding-left:69px;
+			padding-right:10px;}
+div.b2doors	{padding-top:20px;
+			padding-left:69px;
+			padding-right:10px;}
+span.date	{color:#818181;}
+img.b2pic1	{width:95%;
+			border-color:#c89e9f;}
+table.b2copy{padding-left:69px;}	
+td.data	{background-color:#ddddFF;
+		border-radius:25px;
+		width:40%;
+		padding-top:25px;
+		padding-bottom:10px;
+		padding-left:25px;
+		padding-right:25px;
+		font-family:Times New Roman;
+		font-size:17px;
+		border-collapse:collapse;}
+td.copy	{width:60%;
+		padding:10px;
+		font-family:Times New Roman;
+		font-size:17px;
+		border-collapse:collapse;}
 table.foot	{width:100%;
 			border-collapse:collapse;
 			background-image: url(images/footer.jpg);
 			background-size:100%;}
-
+div.foot	{padding-top:20px;
+			padding-left:25px;}
+div.footcopy{color:#c8cb13;
+			font-family:Calibri;
+			font-size:14px;}
+p.policy	{color:#c8cb13;
+			font-family:Arial;
+			font-size:14px;}
+a.link	{color:#285a9e;}
+a.link2	{color:#bbc6cc;
+		font-style:italic;}
 -->
 </style>
 </head>
 
 <body><table class="fpage">
 
-<tr><td><table class="head"><tr>
-<td><img class="logo" src="images/BWlogo.jpg"></td>
+<tr class="c"><td class="c"><table class="head"><tr class="c">
+<td class="c"><img class="logo" src="images/BWlogo.jpg"></td>
 <td class="title">Where 1000s od butterflies take flight!</td>
 </tr></table></td></tr>
 
-<tr><td><table class="fmenu"><tr> 
+<tr class="c"><td class="c"><table class="fmenu"><tr class="c"> 
 <td class="menu1">Home</td>
 <td class="menu2">Our Story</td>
 <td class="menu2">Admission</td>
@@ -112,78 +154,72 @@ table.foot	{width:100%;
 <td class="menu2">Butterfly Shop</td>
 <td class="menu2">Forum</td>
 <td class="menu2">Contact Us</td>
+<td class="menu3">-</td>
 </tr></table></td></tr>
 
+<tr class="c"><td class="c"><table class="c"><tr class="c">
+<td class="bodyleft"><table class="c">
 
-<tr><td><table class="mainbody"><tr>
-<td class="body1"><table class="mainbody">
+<tr class="c"><td class="c"><div class="b1show"><div class="b1subt">BUTTERFLY SHOWCASE</div>
+<p class="text">Check out our butterfly conservatory showcasing over 20 butterfly including:</p>
+</div></td></tr>
 
-<tr><td class="body1"><div class="b1subt">BUTTERFLY SHOWCASE</div>
-<p>Check out our butterfly conservatory showcasing over 20 butterfly including:</p>
-</td></tr>
-
-<tr><td>BLUE MORPHO
-<P><img class="b1pic1" src="images/blueMorpho.jpg"></p>
-<p>Submitted by user iosborn22. Blue morpho butterflys
+<tr class="c"><td class="c"><div class="b1morpho"><div class="b1subt2">BLUE MORPHO</div>
+<P><img class="b1pic1" src="images/blueMorpho.jpg" border=4px></p>
+<p class="text">Submitted by user <span class="user"><b>iosborn22</b></span>. Blue morpho butterflys
 wings are bright blue, edged with black. Blue morpho is
 among the largest butterflies in the world, with wings
 spanning from five to eight inches. mien blue morpho
-flies, the contrasting bright blue and dull brown colors
+flies, the contrasting bright <span class="blue">blue</span> and <span class="brown">dull brown</span> colors
 flash, making it look like the morpho is appearing and
 disappearing.
-</p></td></tr>
+</div></p></td></tr>
 
-<tr><td>OLD WORLD SWALLOWTAIL
-<P><img class="b1pic2" src="images/OWSwallowtail.jpg"></p>
-<p>Submitted by user smoothj282. Papilio machaon, the
+<tr class="c"><td class="c"><div class="b1tail"><div class="b1subt2">OLD WORLD SWALLOWTAIL</div>
+<P><img class="b1pic2" src="images/OWSwallowtail.jpg" border=4px></p>
+<p class="text">Submitted by user <span class="user"><b>smoothj282</b></span>. Papilio machaon, the
 old world swallowtail, is a species of swallowtail that
 naturally occurs in Europe, Africa, Asia and even North
 America. It prefers to lay eggs on Apiaceae plants. It is a
 medium sized swallowtail that is relatively easy to rear
 and breed in captivity.
-</p></td></tr>
+</p></div></td></tr>
 </table></td>
 
-<td class="body2"><table class="a">
-<tr><td colspan="2"><div class="b2subt">OUR MISSION STATEMENT</div><p>
+<td class="bodyright"><table class="c">
+<tr class="c"><td class="c"><div class="b2state"><div class="b2subt">OUR MISSION STATEMENT</div><p class="text">
 Butterfly World is is a unique Lepidoptera source in our state, featuring an
 8,000-square foot indoor conservatory home to some 4,000 exotic and
 domestic butterflies in a tropical environment. Butterfly World focuses on
 butterfly-related education, recreation, entertainment and gardening needs.
-</p></td></tr>
+</p></div></td></tr>
+
+<tr class="c"><td class="c"><div class="b2news"><div class="b2subt">LATEST NEWS</div><p class="text">
+By Cheri Plum, <span class="date">posted April 31, 2022</span>
+</p></div></td></tr>
+
+<tr class="c"><td class="c"><div class="b2doors"><div class="b2subt2">BUTTERFLY WORLD OPENS ITS DOORS</div>
+<p><img class="b2pic1" src="images/conserve.jpg" border=4px></p>
+<p class="text">Latest Conservatory addition.</p>
+</div></td></tr>
 
 
-<tr><td colspan="2">LATEST NEWS
-<p>By Cheri Plum, posted April 31, 2022</p>
-<p>Latest Conservatory addition.</p>
-</td></tr>
+<tr class="c"><table class="b2copy"><tr class="c"><td class="data"><div class="b2subt3">NEED MORE DATA?</div>
+<p>Contact us with your questions, ideas and suggestions.<a class="link"s href="https://duckduckgo.com">Link</a></p>
+</td>
 
-
-<tr><td colspan="2">BUTTERFLY WORLD OPENS ITS DOORS
-<p><img class="b2pic1" src="images/conserve.jpg"></p>
-</td></tr>
-
-
-<tr>
-<td class="copy">NEED MORE DATA?
-<p>Contact us with your questions, ideas and suggestions.</p>
-<a href="https://duckduckgo.com">Link</a></td>
-
-<td>©Copyright 2038 ButterflyWorld.info.</td>
-</tr>
+<td class="copy">©Copyright 2038 ButterflyWorld.info.</td>
+</tr></table></tr>
 
 </table></td>
 
 
 </tr></table></td></tr>
 
-<tr><td>
-<table class="foot">
-<tr>
-<td> Footer </td>
-</tr>
-</table>
-</td></tr>
+<tr><td><table class="foot"><tr><td><div class="foot"><div class="footcopy"><b>Copyright ButterflyWorld 2038</b></div><p class="policy">
+Registration on or use of this site constitutes
+<br>acceptance of our <a class="link2" href="https://duckduckgo.com">user agreement</a> and <a class="link2" href="https://duckduckgo.com">Pivacy <br>Policy.</br></a></br>
+</p></td></div></tr></table></td></tr>
 
 </table></body>
 </html>
